Create landing pages for each section

--- a/networking/index.html
+++ b/networking/index.html
@@ -8,19 +8,19 @@ Networking – how devices communicate – is not well understood. Simple user q
 This course explains networking in a simple-to-follow way, across three sections:
 
 <div class="flex gap-6 justify-center items-center my-7">
-  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-blue-600 dark:bg-blue-900 border-b-4 border-b-blue-800 dark:border-b-blue-950" href="/networking/packet-switching">
+  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-blue-600 dark:bg-blue-900 border-b-4 border-b-blue-800 dark:border-b-blue-950" href="/networking/basics">
     <h2 class="text-2xl font-semibold">Basics</h2>
     <p>
       How networks work, plus troubleshooting
     </p>
   </a>
-  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-purple-600 dark:bg-purple-900 border-b-4 border-b-purple-800 dark:border-b-purple-950" href="/networking/binary">
+  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-purple-600 dark:bg-purple-900 border-b-4 border-b-purple-800 dark:border-b-purple-950" href="/networking/advanced">
     <h2 class="text-2xl font-semibold">Advanced</h2>
     <p>
       More internals, plus routing and switching
     </p>
   </a>
-  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-red-600 dark:bg-red-900 border-b-4 border-b-red-700 dark:border-b-red-950" href="/networking/nat">
+  <a class="block rounded-lg pt-3 pb-4 px-5 w-56 shadow text-center text-white dark:text-white bg-red-600 dark:bg-red-900 border-b-4 border-b-red-700 dark:border-b-red-950" href="/networking/extra-credit">
     <h2 class="text-2xl font-semibold">Extra Credit</h2>
     <p>
       Complicated topics, addressing and security
